[gd_scene load_steps=42 format=3 uid="uid://bb3yyl4dr2qey"]

[ext_resource type="Texture2D" uid="uid://buxpgxehb4253" path="res://assets/player/astronaut_export_sheet.png" id="1_6kjun"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_40kih"]
[ext_resource type="Shader" path="res://scenes/player/color_swap.gdshader" id="2_jnx1s"]
[ext_resource type="PackedScene" uid="uid://dyi7np8o56xxk" path="res://scenes/player/gun.tscn" id="4_r66d2"]
[ext_resource type="Script" path="res://components/hurtbox.gd" id="5_fwsne"]
[ext_resource type="PackedScene" uid="uid://ck7ih0cydbkcb" path="res://scenes/stats.tscn" id="6_haq3c"]
[ext_resource type="PackedScene" uid="uid://dentogqnrpfgu" path="res://ui/hud.tscn" id="7_2xb5s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ifvl8"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iy0x7"]
bg_color = Color(0.596806, 0.638502, 0, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bv036"]
size = Vector2(10, 4.66667)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ij80"]
resource_local_to_scene = true
shader = ExtResource("2_jnx1s")
shader_parameter/from = Color(0.490196, 0.717647, 0.823529, 1)
shader_parameter/to = Color(0.490196, 0.717647, 0.823529, 1)
shader_parameter/tolerance = 0.16

[sub_resource type="Animation" id="Animation_04qlj"]
resource_name = "Death"
length = 0.1
loop_mode = 1
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.933033),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0199999),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}

[sub_resource type="Animation" id="Animation_rseco"]
resource_name = "Idle_back"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_eq2se"]
resource_name = "Idle_front"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0eln8"]
resource_name = "Idle_left"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_nfxgd"]
resource_name = "Idle_right"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_rtqaq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_22kex"]
resource_name = "Walk_back"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_efhr4"]
resource_name = "Walk_forward "
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ssufh"]
resource_name = "Walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_c1e1w"]
resource_name = "Walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yudyw"]
_data = {
"Death": SubResource("Animation_04qlj"),
"Idle_back": SubResource("Animation_rseco"),
"Idle_front": SubResource("Animation_eq2se"),
"Idle_left": SubResource("Animation_0eln8"),
"Idle_right": SubResource("Animation_nfxgd"),
"RESET": SubResource("Animation_rtqaq"),
"Walk_back": SubResource("Animation_22kex"),
"Walk_forward ": SubResource("Animation_efhr4"),
"Walk_left": SubResource("Animation_ssufh"),
"Walk_right": SubResource("Animation_c1e1w")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ekoeq"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fdgm7"]
animation = &"Idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q2ip7"]
animation = &"Idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_raioe"]
animation = &"Idle_front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bbna7"]
animation = &"Idle_back"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_lj2uq"]
blend_point_0/node = SubResource("AnimationNodeAnimation_fdgm7")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_q2ip7")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_raioe")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_bbna7")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oxpvp"]
animation = &"Walk_forward "

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b5hm8"]
animation = &"Walk_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dkosm"]
animation = &"Walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_35grx"]
animation = &"Walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_5gyot"]
blend_point_0/node = SubResource("AnimationNodeAnimation_oxpvp")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_b5hm8")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_dkosm")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_35grx")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g0rpf"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_crvgu"]
advance_mode = 2
advance_condition = &"is_walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i6s40"]
advance_mode = 2
advance_condition = &"Idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_p0kun"]
states/Death/node = SubResource("AnimationNodeAnimation_ekoeq")
states/Death/position = Vector2(501, 157)
states/End/position = Vector2(523, 74)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_lj2uq")
states/Idle/position = Vector2(328, 74)
states/Start/position = Vector2(127, 107)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_5gyot")
states/Walk/position = Vector2(328, 162)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_g0rpf"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_crvgu"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_i6s40")]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_e1lm7"]
properties/0/path = NodePath(".:walking")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:dir")
properties/1/spawn = true
properties/1/replication_mode = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_vf5it"]
properties/0/path = NodePath(".:id")
properties/0/spawn = true
properties/0/replication_mode = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fn5le"]
size = Vector2(35, 71)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6yf8v"]
size = Vector2(102, 128)

[node name="player" type="CharacterBody2D"]
position = Vector2(1, -1)
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_40kih")
metadata/_edit_horizontal_guides_ = [0.0]

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 100
custom_minimum_size = Vector2(50, 10)
offset_left = -31.0
offset_top = -86.0
offset_right = 29.0
offset_bottom = -76.0
theme_override_styles/background = SubResource("StyleBoxFlat_ifvl8")
theme_override_styles/fill = SubResource("StyleBoxFlat_iy0x7")
value = 50.0
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.38419e-07, 0.825278)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_bv036")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_1ij80")
position = Vector2(1, -30)
scale = Vector2(3, 3)
texture = ExtResource("1_6kjun")
hframes = 16
vframes = 6

[node name="Gun" parent="." instance=ExtResource("4_r66d2")]
position = Vector2(-1, -24)

[node name="Player_Tag" type="Label" parent="."]
offset_left = -30.0
offset_top = 10.0
offset_right = 32.0
offset_bottom = 33.0

[node name="Dash_Cooldown" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yudyw")
}
speed_scale = 0.6

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_p0kun")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/Idle = false
parameters/conditions/is_walking = false
parameters/Idle/blend_position = Vector2(0, -0.992806)
parameters/Walk/blend_position = Vector2(-0.299652, -0.122302)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_e1lm7")

[node name="ServerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_vf5it")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("5_fwsne")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-1.5, -27.5)
shape = SubResource("RectangleShape2D_fn5le")

[node name="ReDamage" type="Timer" parent="Hurtbox"]
wait_time = 0.5

[node name="Stats" parent="." instance=ExtResource("6_haq3c")]

[node name="HUD" parent="." instance=ExtResource("7_2xb5s")]

[node name="ResurrectArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResurrectArea"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_6yf8v")

[connection signal="timeout" from="Dash_Cooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="Hurtbox/ReDamage" to="Hurtbox" method="_on_re_damage_timeout"]
